fixed some spacing

--- a/FormSite/style.css
+++ b/FormSite/style.css
@@ -77,6 +77,7 @@ form { max-width:420px; margin:50px auto; }
 
 .space {
     opacity: 0;
+    width: 100%;
   }
 
 textarea {
